# neural-forge

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  commitlint.config.mjs
.dvc-store/: README.md
.githooks/: commit-msg
.github/: CODEOWNERS
.github/workflows/: commitlint.yml  gitignore-baseline.yml  gitleaks.yml  ml-project-scaffold.yml  python-quality.yml  request-copilot-review.yml  semantic-pr-title.yml
1-projects/ai-swe-mlops/: =2.0.0  pyproject.toml  requirements.txt
1-projects/ai-swe-mlops/.claude/: settings.local.json
1-projects/ai-swe-mlops/reports/: metrics.json
1-projects/ai-swe-mlops/src/: __init__.py  evaluate.py  preprocess.py  validate.py
1-projects/ai-swe-mlops/tests/: test_evaluate.py  test_preprocess.py  test_train.py
3-templates/: api-service.md  benchmark-project-perf-framework.md  conventions-shared-all-templates.md  ml-project.md  python-package.md
docs/adr/: 0001-dvc-remote-strategy.md  0002-gitignore-baseline.md
docs/study-plan/: ml-engineer-master-study-plan-v2.md
projects/ai-swe-mlops/: .gitignore  CLAUDE.md  README.md  dvc.yaml  params.yaml  pyproject.toml
projects/ai-swe-mlops/.dvc/: config
projects/ai-swe-mlops/.github/workflows/: ml-pipeline.yml
projects/ai-swe-mlops/configs/: train_config.yaml
projects/ai-swe-mlops/src/: evaluate.py  inference.py  preprocess.py  train.py  validate.py
projects/ai-swe-mlops/tests/: test_evaluate.py  test_preprocess.py  test_train.py
projects/aura-core/: README.md  aura-architecture.md
projects/aura-core/adr/: 0001-cloud-native-with-edge-fallback.md  0002-single-vehicle-scope.md  0003-langgraph-over-langchain.md  0004-qdrant-over-pinecone.md  0005-vllm-over-triton.md  0006-redpanda-over-kafka.md  0007-selective-kubernetes.md  0008-dual-repo-strategy.md  README.md  _template.md
projects/automotive-performance/: README.md  fueltech-ai-project-architecture.md
projects/churn-prediction/: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  dvc.yaml  environment.lock.yml  environment.yml  metrics.json  pyproject.toml  requirements.txt
projects/churn-prediction/.github/workflows/: ci.yml
projects/churn-prediction/data/raw/: churn.csv.dvc
projects/churn-prediction/src/: prepare.py  train.py
projects/churn-prediction/src/churn_prediction/: prepare.py  train.py
projects/churn-prediction/tests/: conftest.py  test_prepare.py  test_train.py
projects/diesel-performance/: AURA-diesel-ai-amarok-v6-architecture.md  README.md  diesel-ai-amarok-v6-architecture.md
projects/linux-docker-kubernetes/: .gitignore  Makefile  README.md  pyproject.toml
projects/linux-docker-kubernetes/labs/lab2/: treina_modelo.py
projects/linux-docker-kubernetes/labs/lab3/: ex2.txt  exemplo1.txt  testedsa.txt
projects/linux-docker-kubernetes/labs/lab5/: LEIAME.txt
projects/linux-docker-kubernetes/labs/lab8/: .gitignore  LEIAME.txt
projects/mlops-git-dvc/: .gitignore  README.md  RULES.md  pyproject.toml
projects/template-project-structure/: .gitignore  README.md
scripts/: dvc-bootstrap.sh
templates/: .gitignore-baseline  benchmark-project-perf-framework.md  benchmark-project.md  ml-project.md
templates/ml-project/: STRUCTURE.txt
