[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-prediction"
version = "0.1.0"
description = "Customer churn prediction pipeline"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "dvc>=3.48.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

# --- Ruff (relaxed — tighten after refactoring scripts into typed functions) --

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# --- Mypy (stepping stone — enable strict after adding type hints) ------------

[tool.mypy]
python_version = "3.10"
strict = false
check_untyped_defs = true
ignore_missing_imports = true

# --- Pytest -------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=0"
