[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-prediction"
version = "0.1.0"
description = "Customer churn prediction pipeline"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "scikit-learn>=1.4.0",
    "dvc>=3.48.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pandas-stubs>=2.0.0",
]

# --- Ruff (gold standard) ----------------------------------------------------

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "PERF",   # perflint
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
]
ignore = [
    "S301",     # pickle — standard in ML pipelines
    "PLR0913",  # too many arguments — common in ML function signatures
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # assert — expected in tests
    "ARG001",   # unused function argument (fixtures)
    "ARG002",   # unused method argument (fixtures)
    "PLR2004",  # magic values in comparisons
    "TCH",      # type-checking imports — tests use them at runtime
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# --- Mypy (strict) -----------------------------------------------------------

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# --- Pytest -------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"
