[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-docker-kubernetes"
version = "0.1.0"
description = "Docker and Kubernetes deployment labs and infrastructure"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

# --- Ruff (gold standard, labs/ excluded — course material) -------------------

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["labs/**"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint subset
    "PERF",   # perflint
]
ignore = [
    "S101",    # assert allowed in tests
    "PLR0913", # too many arguments — common in ML code
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "ARG002", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# --- Mypy (strict, labs/ excluded) --------------------------------------------

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["labs/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# --- Pytest -------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
